# minibuild

./: .gitignore  MODULE.bazel  README.md
src/main/java/dev/markdw/minibuild/: Annotations.java  BUILD  MiniBuild.java  MiniBuildComponent.java  MiniBuildFactory.java  MiniBuildLauncher.java  MiniBuildModule.java  Util.java
src/main/java/dev/markdw/minibuild/graph/: BUILD  DependencyGraph.java
src/proto/: BUILD  minibuild.proto
testdata/: config.txtpb  run.sh
testdata/src/: build.txtpb
