"""
MODULE.bazel
"""

module(
    name = "minibuild",
    version = "0.1.0",
)

bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "protobuf", version = "31.0-rc1")
bazel_dep(name = "rules_jvm_external", version = "6.2")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "dagger",
    urls = ["https://github.com/google/dagger/archive/refs/tags/dagger-2.56.2.tar.gz"],
    strip_prefix = "dagger-dagger-2.56.2",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.dagger:dagger:2.56.2",
        "com.google.flogger:flogger:0.8",
        "com.google.flogger:flogger-system-backend:0.8",
    ],
)
use_repo(maven, "maven")
